version/0.13/_sources/api/solver/_autosummary/settings/injection_type.rst.txt
:orphan:

.. _injection_type:

injection_type
==============

.. autoclass:: ansys.fluent.core.solver.settings_231.injection_type.injection_type

.. rubric:: Attributes

======================================   ===========================

Attribute                                                    Summary

======================================   ===========================
:ref:`option <option_2>`                             'option' child.

:ref:`cone_type <cone_type>`                      'cone_type' child.

:ref:`inject_as_film <inject_as_film>`       'inject_as_film' child.

======================================   ===========================

.. rubric:: Included in:

==========================================   ======================================

Parent                                                                      Summary

==========================================   ======================================
:ref:`injections_child <injections_child>`       'child_object_type' of injections.

==========================================   ======================================

