version/0.22/_sources/api/solver/_autosummary/settings/injection_type.rst.txt
:orphan:

.. _injection_type:

injection_type
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.injection_type.injection_type
    :show-inheritance:

.. rubric:: Attributes

====================================================================================   =================================================================================

Attribute                                                                                                                                                        Summary

====================================================================================   =================================================================================
:ref:`option <option_10>`                                                                                                                               Injection Type:.

:ref:`cone_type <cone_type>`                                                                                                                                 Cone Type:.

:ref:`uniform_massflow_distribution_enabled <uniform_massflow_distribution_enabled>`       Define the shape of the mass flux distribution across the cone cross section.

:ref:`inject_as_film <inject_as_film>`                                                                                                                  Inject as film?.

:ref:`filename <filename_1_1>`                                                                                                                         'filename' child.

====================================================================================   =================================================================================

.. rubric:: Included in:

==========================================   ======================================

Parent                                                                      Summary

==========================================   ======================================
:ref:`injections_child <injections_child>`       'child_object_type' of injections.

==========================================   ======================================

